Changing link for homepage

--- a/fetch_project/package.json
+++ b/fetch_project/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fetch_project",
-  "homepage": "https://Softliampisan.github.io/fetch_frontend_project",
+  "homepage": "https://Softliampisan.github.io/fetch_project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
